additional_resources/k8s_dashboard/TLS_TCP-issue/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-kong-proxy
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  tls:
    - hosts:
         - ss86-nlb-3ecb186efbab9e44.elb.eu-west-1.amazonaws.com
      secretName: ss86-kong-tls-secret
  rules:
    - host: ss86-nlb-3ecb186efbab9e44.elb.eu-west-1.amazonaws.com
      http:
        paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: kubernetes-dashboard-kong-proxy
                 port:
                  number: 30865
